syntax = "proto3";

package inventory;
option go_package = "github.com/Butternut01/ecommerce-platform/api-gateway/proto/inventory";  // Укажи правильный путь

service InventoryService {
    rpc AddProduct(AddProductRequest) returns (AddProductResponse);
    rpc GetProduct(GetProductRequest) returns (GetProductResponse);
    rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
    rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
    rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
}

message AddProductRequest {
    string name = 1;
    string description = 2;
    float price = 3;
    int32 quantity = 4;
}

message AddProductResponse {
    string id = 1;
}

message GetProductRequest {
    string id = 1;
}

message GetProductResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    int32 quantity = 5;
}

message UpdateProductRequest {
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    int32 quantity = 5;
}

message UpdateProductResponse {
    bool success = 1;
}

message DeleteProductRequest {
    string id = 1;
}

message DeleteProductResponse {
    bool success = 1;
}

message ListProductsRequest {}

message ListProductsResponse {
    repeated Product products = 1;
}

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    int32 quantity = 5;
}